deploy/k8s/traduora-preview.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name:  traduora-preview


---
apiVersion: v1
kind: Service
metadata:
  name: traduora
  namespace: traduora-preview
  labels:
    app: traduora
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: traduora


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traduora
  namespace: traduora-preview
  labels:
    app: traduora
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traduora
  template:
    metadata:
      labels:
        app: traduora
    spec:
      containers:
        - name: api
          image: traduora/traduora:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /health
              port: http
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              path: /health
              port: http
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
        - name: mysql
          image: mysql:5.7
          imagePullPolicy: Always
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
