deploy/k8s/traduora-preview-ingress-nginx-http.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  traduora-preview


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traduora
  namespace: traduora-preview
  labels:
    app: traduora
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
spec:
  # tls:
  #   - hosts:
  #     - traduora.example.com
  #     secretName: traduora-tls
  rules:
  - host: traduora.dallasdstb.com  # Replace with your desired DNS record
    http:
      paths:
        - path: /*
          backend:
            serviceName: traduora
            servicePort: http
