deploy/k8s/traduora-preview-ingress-nginx-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  traduora-preview


---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traduora
  namespace: traduora-preview
  labels:
    app: traduora
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # IMPORTANT:
    # It is strongly recommended that you only serve traduora over TLS
    # Configure according to your cloud environment
    #
    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/cluster-issuer: your-letsencrypt-issuer
    # certmanager.k8s.io/acme-challenge-type: dns01
    # certmanager.k8s.io/acme-dns01-provider: your-dns-provider-name
spec:
  tls:
    - hosts:
      - traduoratest.dallasdstb.com
      secretName: traduora-tls
  rules:
  - host: traduoratest.dallasdstb.com  # Replace with your desired DNS record
    http:
      paths:
        - path: /
          backend:
            serviceName: traduora
            servicePort: http
